[package]
name = "sockit"
version = "0.2.0"
edition = "2021"
authors = ["Will Cygan <wcygan.io@gmail.com>"]
description = "A UDP socket that can read and write serializable data"
categories = ["asynchronous", "network-programming"]
keywords = ["io", "udp", "serialization"]
license = "MIT"
exclude = ["/.github"]

[[test]]
name = "test"
path = "test/test.rs"

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.156", features = ["derive"] }
bincode = "1.3.3"
bytes = "1.4.0"
thiserror = "1.0.40"

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }